--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "electron_build":"tsc electronApp.ts",
-    "electron":"electron ./electronApp.js"
+    "electron_build": "tsc electronApp.ts",
+    "electron": "electron ./electronApp.js"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
     "electron": "^7.1.11",
+    "ngx-electron": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
