--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -23,7 +23,7 @@
     /* Strict Type-Checking Options */
     //"strict": true,                           /* Enable all strict type-checking options. */
     // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
-     "strictNullChecks": true,              /* Enable strict null checks. */
+    // "strictNullChecks": true,              /* Enable strict null checks. */
      "strictFunctionTypes": true,           /* Enable strict checking of function types. */
     // "strictBindCallApply": true,           /* Enable strict 'bind', 'call', and 'apply' methods on functions. */
     // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
@@ -59,6 +59,7 @@
   },
   "exclude": [
     "node_modules",
-    "**/*.dev.ts"
+    "**/*.dev.ts",
+    "UI"
   ],
 }
