--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron_build": "cd electron && tsc && cd ..",
-    "electron": "electron ."
+    "electron": "electron ./electron/dist/"
   },
   "private": true,
   "dependencies": {
