--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "clipboardy": "^2.1.0",
     "electron": "^7.1.11",
+    "fast-glob": "^3.1.1",
+    "flexsearch": "^0.6.32",
+    "lowdb": "^1.0.0",
     "ngx-electron": "^2.2.0",
+    "pdf-parse": "^1.1.1",
     "rxjs": "~6.4.0",
+    "sqlite3": "^4.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -32,9 +38,11 @@
     "@angular/cli": "~8.3.12",
     "@angular/compiler-cli": "~8.2.11",
     "@angular/language-service": "~8.2.11",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "~8.9.4",
+    "@types/sqlite3": "^3.1.6",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
