--- a/package.json
+++ b/package.json
@@ -1,59 +1,45 @@
 {
-  "name": "electron-ng-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "electron_build": "cd electron && tsc && cd ..",
-    "electron": "electron ./electron/dist/"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~8.2.11",
-    "@angular/common": "~8.2.11",
-    "@angular/compiler": "~8.2.11",
-    "@angular/core": "~8.2.11",
-    "@angular/forms": "~8.2.11",
-    "@angular/platform-browser": "~8.2.11",
-    "@angular/platform-browser-dynamic": "~8.2.11",
-    "@angular/router": "~8.2.11",
-    "clipboardy": "^2.1.0",
-    "electron": "^7.1.11",
-    "fast-glob": "^3.1.1",
-    "flexsearch": "^0.6.32",
-    "lowdb": "^1.0.0",
-    "ngx-electron": "^2.2.0",
-    "pdf-parse": "^1.1.1",
-    "rxjs": "~6.4.0",
-    "sqlite3": "^4.1.1",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.12",
-    "@angular/cli": "~8.3.12",
-    "@angular/compiler-cli": "~8.2.11",
-    "@angular/language-service": "~8.2.11",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "~8.9.4",
-    "@types/sqlite3": "^3.1.6",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  }
+	"name": "focus.ai",
+	"version": "1.0.0",
+	"description": "",
+	"main": ".build/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"uibuild": "cd ui && ng build --base-href ./",
+		"build": "tsc",
+		"start": "electron .",
+		"pack": "electron-builder --dir",
+		"dist": "electron-builder",
+		"postinstall": "electron-builder install-app-deps"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/thecodacus/focus.ai.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/thecodacus/focus.ai/issues"
+	},
+	"homepage": "https://github.com/thecodacus/focus.ai#readme",
+	"devDependencies": {
+		"@types/electron": "^1.6.10",
+		"@types/node": "^15.0.2",
+		"electron": "^12.0.6",
+		"electron-builder": "^22.11.1",
+		"electron-notarize": "^1.0.0",
+		"typescript": "^4.2.4"
+	},
+	"dependencies": {
+		"clipboardy": "^2.3.0",
+		"lodash": "^4.17.21",
+		"rxjs": "^7.0.0"
+	},
+	"build": {
+		"appId": "focus.ai",
+		"mac": {
+			"category": "public.app-category.developer-tools",
+			"hardenedRuntime": true
+		}
+	}
 }
