--- a/.github/workflows/win-build.yml
+++ b/.github/workflows/win-build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Windows Build
 
 # Controls when the action will run.
 on:
@@ -20,7 +20,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: electronuserland/builder:wine
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -46,20 +46,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Package
         run: npm run pack
-
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux artifacts
-          path: |
-            dist/linux-*
-
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: mac artifacts
-          path: |
-            dist/mac-*
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
