--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           name: macos artifacts
           path: |
-            dist/mac-*
+            dist/mac*
 
   win_build:
     # The type of runner that the job will run on
@@ -81,7 +81,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Package
-        run: npm run pack
+        run: |
+          npm run pack
+          ls dist
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
