--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -44,88 +44,82 @@ jobs:
         run: npm run build
 
       # Runs a single command using the runners shell
-      - name: Package
-        run: npm run pack
 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: macos artifacts
-          path: |
-            dist/mac*
+      - name: Publish
+        run: npm run publish
 
-  win_build:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
+  # win_build:
+  #   # The type of runner that the job will run on
+  #   runs-on: windows-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Install Node Dependencies
-        run: npm i
+  #     - name: Install Node Dependencies
+  #       run: npm i
 
-      - name: Install Node Dependencies
-        run: npm run installUi
+  #     - name: Install Node Dependencies
+  #       run: npm run installUi
 
-      # Runs a single command using the runners shell
-      - name: Build UI
-        run: |
-          cd ui 
-          npm i @angular/cli -D
-          npx ng build
+  #     # Runs a single command using the runners shell
+  #     - name: Build UI
+  #       run: |
+  #         cd ui
+  #         npm i @angular/cli -D
+  #         npx ng build
 
-      # Runs a single command using the runners shell
-      - name: Build Electron Main
-        run: npm run build
+  #     # Runs a single command using the runners shell
+  #     - name: Build Electron Main
+  #       run: npm run build
 
-      # Runs a single command using the runners shell
-      - name: Package
-        run: |
-          npm run pack
-          ls dist
+  #     # Runs a single command using the runners shell
+  #     - name: Package
+  #       run: |
+  #         npm run pack
+  #         ls dist
 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: windows artifacts
-          path: |
-            dist/win-*
+  #     - name: Archive production artifacts
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: windows artifacts
+  #         path: |
+  #           dist/win-*
 
-  linux_build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  # linux_build:
+  #   # The type of runner that the job will run on
+  #   runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
+  #   # Steps represent a sequence of tasks that will be executed as part of the job
+  #   steps:
+  #     - uses: actions/checkout@v2
 
-      - name: Install Node Dependencies
-        run: npm i
+  #     - name: Install Node Dependencies
+  #       run: npm i
 
-      - name: Install Node Dependencies
-        run: npm run installUi
+  #     - name: Install Node Dependencies
+  #       run: npm run installUi
 
-      # Runs a single command using the runners shell
-      - name: Build UI
-        run: |
-          cd ui 
-          npm i @angular/cli -D
-          npx ng build
+  #     # Runs a single command using the runners shell
+  #     - name: Build UI
+  #       run: |
+  #         cd ui
+  #         npm i @angular/cli -D
+  #         npx ng build
 
-      # Runs a single command using the runners shell
-      - name: Build Electron Main
-        run: npm run build
+  #     # Runs a single command using the runners shell
+  #     - name: Build Electron Main
+  #       run: npm run build
 
-      # Runs a single command using the runners shell
-      - name: Package
-        run: |
-          sudo apt-get install --no-install-recommends -y libopenjp2-tools
-          npm run pack
+  #     # Runs a single command using the runners shell
+  #     - name: Package
+  #       run: |
+  #         sudo apt-get install --no-install-recommends -y libopenjp2-tools
+  #         npm run pack
 
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux artifacts
-          path: |
-            dist/linux-*
+  #     - name: Archive production artifacts
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: linux artifacts
+  #         path: |
+  #           dist/linux-*
