--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"start": "electron .",
 		"pack": "electron-builder --dir",
 		"dist": "electron-builder",
-		"postinstall": "electron-builder install-app-deps"
+		"postinstall": "electron-builder install-app-deps",
+		"publish": "electron-builder -mwl --publish always"
 	},
 	"repository": {
 		"type": "git",
@@ -35,13 +36,5 @@
 		"clipboardy": "^2.3.0",
 		"lodash": "^4.17.21",
 		"rxjs": "^7.0.0"
-	},
-	"build": {
-		"appId": "focus.ai",
-		"mac": {
-			"category": "public.app-category.productivity",
-			"hardenedRuntime": false,
-			"target": "dmg"
-		}
 	}
 }
